--- a/TitleBarLess/app/src/main/AndroidManifest.xml
+++ b/TitleBarLess/app/src/main/AndroidManifest.xml
@@ -1,10 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.kh1936.titlebarless" >
+
     <uses-sdk
         android:minSdkVersion="8"
-        android:targetSdkVersion="17"        />
+        android:targetSdkVersion="17" />
+
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
+    <android:uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="18" />
+    <android:uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <android:uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="18" />
 
     <application
         android:allowBackup="true"
@@ -20,6 +30,10 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".ListViewDemo"
+            android:label="@string/title_activity_list_view_demo" >
         </activity>
     </application>
 
